# yagabor

./: .gitignore  .gitmodules  Cargo.toml  README.md
desktop-gui/: Cargo.toml
desktop-gui/src/: emulation.rs  main.rs  screen.rs
emulator/: README.md
emulator/desktop-gui/: Cargo.toml
emulator/desktop-gui/src/: main.rs
emulator/gameboy/: Cargo.toml
emulator/gameboy/src/: cartridge.rs  emulation.rs  gameboy.rs  lib.rs
emulator/gameboy/src/cpu/: tests.rs
emulator/gameboy/src/cpu/instructions/: alu.rs  mod.rs
emulator/gameboy/src/io/: io.rs  joypad.rs  timers.rs
gameboy/: Cargo.toml
gameboy/src/: emulation.rs  gameboy.rs  lib.rs  mmu.rs
gameboy/src/cpu/: cpu.rs  mod.rs  registers.rs
gameboy/src/io/: interrupts.rs  lcd.rs  mod.rs
src/: cartridge.rs  clock.rs  cpu.rs  debug.rs  emulation.rs  gameboy.rs  main.rs  rom.rs  screen.rs
src/cpu/: alu.rs  bus.rs  instructions.rs  mod.rs  registers.rs  tests.rs
src/gameboy/: cartridge.rs  gameboy.rs  interrupts.rs  keypad.rs  mmu.rs  mod.rs  ppu.rs  rom.rs  serial.rs
src/gameboy/cpu/: alu.rs  bus.rs  cpu.rs  gpu.rs  instructions.rs  io.rs  mmu.rs  mod.rs  registers.rs  rom.rs  tests.rs  timers.rs
src/gameboy/io/: interrupts.rs  io.rs  joypad.rs  lcd.rs  mod.rs  timers.rs
src/gameboy/rom/: mod.rs  tests.rs
src/rom/: tests.rs
web-api/: Cargo.toml
web-gui/: Cargo.toml
web-ui/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
web-ui/deploy/: build1.sh  build2.sh
web-ui/scripts/: build_vercel.sh
web-ui/src/: style.css
web-ui/src/lib/: constants.ts
(+12 files in other folders)
