[package]
name = "gameboy"
version = "0.1.0"
edition = "2021"
authors = ["Patricio Inzaghi <p@inzaghi.ar>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pretty-hex = { version = "0.3.0" }
wasm-bindgen = "0.2"